# prototype-norganise-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: args.rs  json.rs  lib.rs  main.rs  tests.rs
src/app/: config.rs  event_handling.rs  mod.rs  model.rs  model_helpers.rs  note_store.rs  searching.rs  tests.rs  view.rs
src/app/editor/: mod.rs  nvim.rs
src/app/forms/: edit_note_form.rs  form.rs  mod.rs  new_note_form.rs  note_search_form.rs
src/app/view_components/: mod.rs  note_list.rs  styles.rs  text_area.rs
src/app/view_components/popups/: form_popup.rs  input_form_popup.rs  mod.rs  selection.rs
