[package]
name = "norganisers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = {version = "0.4.41", features = ["serde"]}
dirs = "6.0.0"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.19.1"

[[bin]]
name = "norganisers_app"
path = "src/main.rs"

[lib]
name = "norganisers_lib"
